Fix: Address horizontal scroll issue

--- a/app/assets/stylesheets/placeholder.scss
+++ b/app/assets/stylesheets/placeholder.scss
@@ -12,6 +12,7 @@ $DARK_BLUE: #130957;
 
 html {
     background: $OFF_WHITE;
+    overflow-x: hidden;
 }
 
 body {
